tests/negative/test_type_arr_size_zero.orb
sym a:(i32 0);

fnc main() () {};